--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Gurumauli Ganpati</title>
     <!--custom css-->
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <!--font awesome-->
     <script src="https://kit.fontawesome.com/3b1ca000cb.js"></script> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -20,13 +19,13 @@
             <a href="index.html" class="nav-logo">Gurumauli Ganpati</a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Bookings</a>
+                    <a href="book.html" class="nav-link">Bookings</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Locate</a>
+                    <a href="locate.html" class="nav-link">Locate</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Contact</a>
+                    <a href="contact.html" class="nav-link">Contact</a>
                 </li>
             </ul>
             <div class="hamburger">
@@ -345,15 +344,15 @@
         <div class="services">
             <div class="cen">
                 <div class="service">
-                <img src="assets/images/shadu.jpg" class="img-1">
+                <img src="assets/images/shadu.png" class="img-1">
                     <p>Shadu mati</p>
                 </div>
                 <div class="service">
-                    <img src="assets/images/pop.jpg" class="img-2">
+                    <img src="assets/images/pop.png" class="img-2">
                     <p>POP Made</p>
                 </div>
                 <div class="service">
-                    <img src="assets/images/shadu.jpg" class="img-2">
+                    <img src="assets/images/shadu.png" class="img-2">
                     <p>Small Sized</p>
                 </div>
             </div>
