--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="icon" type="image/x-icon" href="assets/images/ppn.png">
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <title>Gurumauli Ganpati</title>
+          <script src="https://kit.fontawesome.com/3b1ca000cb.js"></script> 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <!--custom css-->
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,6 +17,6 @@
        Your website is closed!
       </h1>
       <p>Developed by Atharva Suryawanshi</p>
- 
+<i class="fa fa-exclamation-triangle"></i>
    </body>
    </html>
